Added class='cardObject' for App.js to format and wrap cards.  Flexing.

--- a/src/components/Asana.css
+++ b/src/components/Asana.css
@@ -1,9 +1,7 @@
-img {
-    max-width: 300px;
+.cardObject {
+    display: flex;
+    flex-wrap: wrap;
+    width: '18rem';   
+    max-width: 350px;
 }
 
-.Card {
-    display: flex;
-    flex-wrap: nowrap;
-    width: '18rem';   
-}
