--- a/src/components/Asana.css
+++ b/src/components/Asana.css
@@ -1,15 +1,21 @@
 .cardImage {
     width: 300px;
+    border: 2px black solid; 
+    margin: 10px;
 }
 
 .cardObject {
     display: flex;
     flex-wrap: wrap;
     width: '18rem'; 
-    border: 2px black solid; 
+    border: 2px black solid;
+    text-align: justify;
+ 
 }
 
-/* .Card {
+.Asana {
+    display: flex;
+    flex-direction: column;
     border: 2px black solid; 
-} */
+}
 
