Cleaned up class to className and improved buttons with flex columns.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,17 @@
+.asanaBrowser {
+  display: flex;
+  flex-direction: column;
+}
+
+.cardButton {
+  display: flex;
+  flex-wrap: nowrap;
+  margin: auto;
+  border: 1px solid black;
+}
+
 
 .cardObject {
   display: flex;
   flex-wrap: wrap;
 }
-
