--- a/src/components/Asana.css
+++ b/src/components/Asana.css
@@ -1,6 +1,7 @@
 .cardImage {
-    max-width: 300px;
+    max-width: 95%;
     border: 2px black solid; 
     margin: 10px;
-    overflow: auto;
+    white-space: nowrap;
+    overflow: hidden;
 }
